# MPILab10

./: CMakeLists.txt  README.md  main.cpp  main2.cpp
